test-app-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  type: NodePort
  selector:
    app: a-api-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
