istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-ingress-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - micro-world.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-rule
  namespace: default
spec:
  hosts:
  - micro-world.com
  gateways:
  - app-ingress-gateway
  http:
  - match:
      - uri:
         exact: "/D"
    route:
    - destination:
        port:
          number: 80
        host: a-api-service
  - route:
    - destination:
        port:
          number: 80
        host: api-gateway-service
